--- a/game.html
+++ b/game.html
@@ -721,7 +721,7 @@
       );
     });
 
-   /*******************************************************
+ /*******************************************************
  * 6) LOGIN
  *******************************************************/
 auth.onAuthStateChanged(async (user) => {
@@ -740,7 +740,10 @@ auth.onAuthStateChanged(async (user) => {
 
     // Adiciona o jogador logado ao nó players
     playerRef = db.ref("HannahGames/guessTheWord/currentGame/players/" + userUid);
-    playerRef.set({ name: userName, joinedAt: Date.now() });
+    playerRef.set({
+      name: userName,
+      joinedAt: Date.now(),
+    });
   } else {
     // Usuário convidado (não logado)
     userUid = null;
@@ -751,7 +754,10 @@ auth.onAuthStateChanged(async (user) => {
     // Gera um ID único para o convidado
     const guestId = `guest_${Date.now()}`;
     playerRef = db.ref("HannahGames/guessTheWord/currentGame/players/" + guestId);
-    playerRef.set({ name: "Guest", joinedAt: Date.now() });
+    playerRef.set({
+      name: "Guest",
+      joinedAt: Date.now(),
+    });
   }
 
   // Remove o jogador do nó players ao desconectar
@@ -805,7 +811,7 @@ auth.onAuthStateChanged(async (user) => {
       });
     }
 
-   /*******************************************************
+  /*******************************************************
  * 9) OUVIR ESTADO DO JOGO
  *******************************************************/
 function listenGameState() {
@@ -858,7 +864,20 @@ function listenGameState() {
     const activePlayersCount = Object.keys(players).length;
 
     // Atualiza a exibição de jogadores ativos
-    document.getElementById("active-players-count").textContent = `Active Players: ${activePlayersCount}`;
+    const activePlayersElement = document.getElementById("active-players-count");
+    if (activePlayersElement) {
+      activePlayersElement.textContent = `Active Players: ${activePlayersCount}`;
+    }
+  });
+
+  // Atualiza o contador global de jogos jogados
+  const gamesPlayedRef = db.ref("HannahGames/guessTheWord/currentGame/gamesPlayed");
+  gamesPlayedRef.on("value", (snapshot) => {
+    const gamesPlayed = snapshot.val() || 0;
+    const ownerGamesCountElement = document.getElementById("ownerGamesCount");
+    if (ownerGamesCountElement) {
+      ownerGamesCountElement.textContent = gamesPlayed;
+    }
   });
 }
 
