--- a/game.html
+++ b/game.html
@@ -721,7 +721,7 @@
       );
     });
 
- /*******************************************************
+/*******************************************************
  * 6) LOGIN
  *******************************************************/
 auth.onAuthStateChanged(async (user) => {
@@ -738,8 +738,8 @@ auth.onAuthStateChanged(async (user) => {
     userName = data.nome || data.email || "User";
     userRole = data.role || ""; // Obtém o role do usuário logado (se disponível)
 
-    // Adiciona o jogador logado ao nó players
-    playerRef = db.ref("HannahGames/guessTheWord/currentGame/players/" + userUid);
+    // Adiciona o jogador logado ao nó global players
+    playerRef = db.ref("HannahGames/guessTheWord/players/" + userUid);
     playerRef.set({
       name: userName,
       joinedAt: Date.now(),
@@ -753,7 +753,7 @@ auth.onAuthStateChanged(async (user) => {
 
     // Gera um ID único para o convidado
     const guestId = `guest_${Date.now()}`;
-    playerRef = db.ref("HannahGames/guessTheWord/currentGame/players/" + guestId);
+    playerRef = db.ref("HannahGames/guessTheWord/players/" + guestId);
     playerRef.set({
       name: "Guest",
       joinedAt: Date.now(),
@@ -811,7 +811,7 @@ auth.onAuthStateChanged(async (user) => {
       });
     }
 
-  /*******************************************************
+ /*******************************************************
  * 9) OUVIR ESTADO DO JOGO
  *******************************************************/
 function listenGameState() {
@@ -859,7 +859,7 @@ function listenGameState() {
   });
 
   // Monitora o número de jogadores ativos
-  db.ref("HannahGames/guessTheWord/currentGame/players").on("value", (snap) => {
+  db.ref("HannahGames/guessTheWord/players").on("value", (snap) => {
     const players = snap.val() || {};
     const activePlayersCount = Object.keys(players).length;
 
@@ -871,7 +871,7 @@ function listenGameState() {
   });
 
   // Atualiza o contador global de jogos jogados
-  const gamesPlayedRef = db.ref("HannahGames/guessTheWord/currentGame/gamesPlayed");
+  const gamesPlayedRef = db.ref("HannahGames/guessTheWord/gamesPlayed");
   gamesPlayedRef.on("value", (snapshot) => {
     const gamesPlayed = snapshot.val() || 0;
     const ownerGamesCountElement = document.getElementById("ownerGamesCount");
