--- a/game.html
+++ b/game.html
@@ -749,12 +749,11 @@ auth.onAuthStateChanged(async (user) => {
       joinedAt: Date.now(),
     });
 
-    // Nova fala para usuários logados
+    // Nova mensagem para usuários logados
     if (!localStorage.getItem("welcomeMessageShown")) {
-      speakText(`Hello ${userName}! Take your guess and try to be the first to figure out the hidden word. Hit the Invite button to bring your friends along and make the game even more exciting!`);
+      speakText(`Hello ${userName}! Take your guess and try to be the first to discover the hidden word. Use the Invite button to call your friends and make the game more fun!`);
       localStorage.setItem("welcomeMessageShown", "true");
     }
-
   } else {
     // Usuário convidado (não logado)
     userUid = null;
@@ -886,7 +885,7 @@ function listenGameState() {
       localStorage.setItem("guestMessageShown", "true");
     }
 
-    // Nova fala para usuários logados, apenas no início do jogo
+    // Mensagem para usuários logados no início do jogo
     if (!isGuest && currentStatus === "idle" && !localStorage.getItem("loggedUserGameMessageShown")) {
       speakText(`Hello ${userName}! The game is ready. Try to guess the hidden word and invite your friends to join the fun!`);
       localStorage.setItem("loggedUserGameMessageShown", "true");
